--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -127,9 +127,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp" />
+    <ClCompile Include="State\GameStateManager.cpp" />
+    <ClCompile Include="State\GS_MainMenu.cpp" />
+    <ClCompile Include="State\GS_PlayState.cpp" />
+    <ClCompile Include="State\GS_WelcomScreen.cpp" />
+    <ClCompile Include="State\StateBase.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Singleton.h" />
+    <ClInclude Include="State\GameStateManager.h" />
+    <ClInclude Include="State\GS_MainMenu.h" />
+    <ClInclude Include="State\GS_PlayState.h" />
+    <ClInclude Include="State\GS_WelcomScreen.h" />
+    <ClInclude Include="State\StateBase.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
