--- a/Framework3D/TrainingFramework/TrainingFramework.vcxproj
+++ b/Framework3D/TrainingFramework/TrainingFramework.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SceneManager2D.h" />
     <ClInclude Include="Shaders.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
