add player class

--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -127,6 +127,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="State\GameStateManager.cpp" />
     <ClCompile Include="State\GS_MainMenu.cpp" />
     <ClCompile Include="State\GS_PlayState.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="State\GameStateManager.h" />
     <ClInclude Include="State\GS_MainMenu.h" />
