--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HotAirBalloon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files\GameState</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HotAirBalloon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
