--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -128,6 +128,9 @@
   <ItemGroup>
     <ClCompile Include="main_game.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="ResourcesManager2D.cpp" />
+    <ClCompile Include="SceneManager2D.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="State\GameStateManager.cpp" />
     <ClCompile Include="State\GS_MainMenu.cpp" />
     <ClCompile Include="State\GS_PlayState.cpp" />
@@ -137,7 +140,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h" />
+    <ClInclude Include="ResourcesManager2D.h" />
+    <ClInclude Include="SceneManager2D.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="State\GameStateManager.h" />
     <ClInclude Include="State\GS_MainMenu.h" />
     <ClInclude Include="State\GS_PlayState.h" />
