--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -126,6 +126,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ItemBody.cpp" />
     <ClCompile Include="main_game.cpp" />
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -138,8 +139,10 @@
     <ClCompile Include="State\GS_WelcomScreen.cpp" />
     <ClCompile Include="State\StateBase.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="WorldManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ItemBody.h" />
     <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="ResourcesManager2D.h" />
@@ -153,6 +156,7 @@
     <ClInclude Include="State\StateBase.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WorldManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Box2D\Build\Box2D.vcxproj">
