--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -129,6 +129,8 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="CanonBullet.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="FloatingFish.cpp" />
     <ClCompile Include="GunBullet.cpp" />
     <ClCompile Include="ItemBody.cpp" />
     <ClCompile Include="main_game.cpp" />
@@ -149,6 +151,8 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="CanonBullet.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="FloatingFish.h" />
     <ClInclude Include="GunBullet.h" />
     <ClInclude Include="ItemBody.h" />
     <ClInclude Include="Obstacle.h" />
