--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -123,6 +123,15 @@
     <ClInclude Include="SuicideBug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RockyGolem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FallingRock.h">
+      <Filter>Header Files\Combat\Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="FallingRockPool.h">
+      <Filter>Header Files\Combat\Bullet</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -202,6 +211,15 @@
     </ClCompile>
     <ClCompile Include="SuicideBug.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RockyGolem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FallingRockPool.cpp">
+      <Filter>Source Files\Combat\Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="FallingRock.cpp">
+      <Filter>Source Files\Combat\Bullet</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
