--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="FallingRockPool.h">
       <Filter>Header Files\Combat\Bullet</Filter>
     </ClInclude>
+    <ClInclude Include="DeadlyBird.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -220,6 +223,9 @@
     </ClCompile>
     <ClCompile Include="FallingRock.cpp">
       <Filter>Source Files\Combat\Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="DeadlyBird.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
