--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="DeadlyBird.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VampireBat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -225,6 +228,9 @@
       <Filter>Source Files\Combat\Bullet</Filter>
     </ClCompile>
     <ClCompile Include="DeadlyBird.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VampireBat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
