--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="Source Files\UI">
       <UniqueIdentifier>{90672610-4f1e-4287-b432-a4c74d40e134}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\FreeType">
+      <UniqueIdentifier>{787922ca-323c-47dc-b6a5-2172715ea471}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -129,6 +132,18 @@
     <ClInclude Include="UIComponent.h">
       <Filter>Header Files\UI</Filter>
     </ClInclude>
+    <ClInclude Include="..\FreeType\include\ft2build.h">
+      <Filter>Header Files\FreeType</Filter>
+    </ClInclude>
+    <ClInclude Include="FontFace.h">
+      <Filter>Header Files\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="MaterialText2D.h">
+      <Filter>Header Files\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="UIText.h">
+      <Filter>Header Files\UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -207,6 +222,15 @@
       <Filter>Source Files\Combat\Weapon</Filter>
     </ClCompile>
     <ClCompile Include="UIComponent.cpp">
+      <Filter>Source Files\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="FontFace.cpp">
+      <Filter>Source Files\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIText.cpp">
+      <Filter>Source Files\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="MaterialText2D.cpp">
       <Filter>Source Files\UI</Filter>
     </ClCompile>
   </ItemGroup>
