--- a/Framework3D/TrainingFramework/TrainingFramework.vcxproj.filters
+++ b/Framework3D/TrainingFramework/TrainingFramework.vcxproj.filters
@@ -188,6 +188,12 @@
     <None Include="..\Resources\Shaders\Sprite2DShaderFS.fs">
       <Filter>Resources\Shaders</Filter>
     </None>
+    <None Include="..\Resources\Shaders\TextShaderVS.vs">
+      <Filter>Resources\Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\TextShaderFS.fs">
+      <Filter>Resources\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Resources\Datas\scene2d.txt">
