--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="State\GameStateManager.cpp" />
     <ClCompile Include="State\GS_MainMenu.cpp" />
+    <ClCompile Include="State\GS_PauseState.cpp" />
     <ClCompile Include="State\GS_PlayState.cpp" />
     <ClCompile Include="State\GS_WelcomScreen.cpp" />
     <ClCompile Include="State\StateBase.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="State\GameStateManager.h" />
     <ClInclude Include="State\GS_MainMenu.h" />
+    <ClInclude Include="State\GS_PauseState.h" />
     <ClInclude Include="State\GS_PlayState.h" />
     <ClInclude Include="State\GS_WelcomScreen.h" />
     <ClInclude Include="State\StateBase.h" />
